--- a/html/food.html
+++ b/html/food.html
@@ -14,7 +14,7 @@
             <h1><br>飼料的優點及如何挑選？</br><br>狗狗乾糧的普及性與方便性</br></h1>
             <br><h2><br>乾糧目前有分為兩種，一種為高溫烘乾，另一種則是冷凍脫水。</br><br>兩類製作過程有滿大的差異，但同樣都是為了將食物的水份帶走，留住食物的營養，並增加保存期限，主要特色有以下幾點：</br></h2></br>
             <div class="part1">
-                <h1><span style="color:rgb(31, 129, 241)">(1)價格實惠</span></h1>
+                <h1><span style="color:rgb(31, 129, 241)">(1)價格實惠：</span></h1>
                 <br><h2> 與鮮食、生食相比，乾糧的價格便宜非常多，且熱量、營養素足夠，所以是目前大多數狗狗主要的食物來源。</h2></br>
             </div>
             <div class="part2">
