--- a/html/fun/fun1.html
+++ b/html/fun/fun1.html
@@ -14,6 +14,9 @@
                 <img src="/1x/北部.png"width="650px"height="200px">
             </div>
             <div class="content">
+                <div class="part0">
+                    <h1>北部寵物友善住宿推薦</h1>
+                </div>
                 <div class="part1">
                     <h1>1、台北市 <a href="https://americanvillage.ezhotel.com.tw/"target="_blank">陽明山美國渡假村</a></h1>
                     <br><h2><br>地址：台北市士林區凱旋路61巷2弄2號</br><br>訂房電話：0963-268580</br><br>寵物公約：寵物可一起入住，每棟最多兩隻寵物，若超過將收清潔費500元，入住前須先告知寵物數量與品種。</br></h2></br>
@@ -56,8 +59,53 @@
                         <div class="word3-3"><br>寵物住宿空間獨立於歐式建築內，每間房間皆有15坪大小，且房內備有寵物床、寵物餐桌、尿盆、空氣清淨機，以送上一個寵物旅行包。</br><br>(圖片來源：東森山林渡假酒店臉書)</br></div>
                     </div>
                 </div>
-                <div class="button"><a href="/html/fun/fun.html"style="text-decoration:none;">BACK</a></div>
+                <div class="part4">
+                    <h1>北部寵物友善餐廳推薦</h1>
                 </div>
+                <div class="part5">
+                    <h1>1、台北市 <a href="https://www.facebook.com/thecafeby1/"target="_blank">The cafe’ by 想陽明山</a></h1>
+                    <br><h2><br>地址：台北市士林區光華路30號</br><br>營業時間：每日11:00至20:30</br><br>預約電話：(02) 28626628</br></h2></br>
+                    <div class="photo5-1">
+                        <img src="/1x/楊1.png"width="450px"height="400px">
+                        <div class="word5-1">The cafe’ by 想陽明山顧名思義，位於陽明山上的庭園餐廳，整體建築走白色美式鄉村風格，庭園一片綠意盎然的草皮和植栽樹木，襯托著清新質感的建職，讓人一走進來就能感受到舒適氛圍的環境。<br><br>(圖片來源：想陽明山臉書)</br></br></div>
+                    </div>
+                    <div class="photo5-2">
+                        <img src="/1x/楊2.png"width="450px"height="400px">
+                        <div class="word5-2">想陽明山主要供應義式創意料理，餐點食材強調新鮮、天然健康，各式排餐、主套餐、甜點供選擇，如果要舉辦寵物派對也沒問題～一般寵物進入室內必須有寵物包或寵物推車，而大毛孩則會直接安排在戶外用餐區，可一邊用餐一邊踩踩草皮，其實反而比在室內用餐更愜意、自在。<br><br>(圖片來源：想陽明山臉書)</br></br></div>
+                        <div class="word5-3"><br>而且園內有多株落羽松與櫻花樹，不管哪個季節來這裡用餐，欣賞怡人景致之餘，還能跟毛孩一起享用精緻的西式餐點，魚水兼得！</br></div>
+                    </div>
+                </div>
+                <div class="part6">
+                    <h1>2、宜蘭縣 <a href="https://www.facebook.com/haohaokaffe"target="_blank"> HaoHaoKaffe好好咖啡</a></h1>
+                    <br><h2><br>地址：宜蘭縣五結鄉中正路一段2巷125號</br><br>營業時間：每日10:00至18:00(周三/周四公休)</br><br>預約電話：(03) 9558281</br></h2></br>
+                    <div class="photo6-1">
+                        <img src="/1x/宜蘭2.png"width="450px"height="400px">
+                        <div class="word6-1"><br>這間是宜蘭市區少數的寵物友善餐廳，寵物入內只要繫繩就可以陪同用餐。室內室外皆有用餐區可入座。</br><br>如果你家狗狗比較怕生，可以直接選擇室外，天氣好的時候，陽光和煦，幸運的話可以欣賞到不錯的風景。</br><br><br> (圖片來源：HaoHaoKaffe好好咖啡臉書)</br></br></div>
+                    </div>
+                    <div class="photo6-2">
+                        <img src="/1x/宜蘭1.png"width="450px"height="400px">
+                        <div class="word6-2">HaoHaoKaffe好好咖啡位於羅東林場文化園區西側門旁，特色招牌上有隻狗狗圖案就是店狗阿金，雖然沒有機會再見到阿金，但老闆將愛犬的信念投注於餐廳上，把愛延續下去。<br><br>(圖片來源：HaoHaoKaffe好好咖啡臉書)</br></br></div>
+                        <div class="word6-3"><br>HaoHaoKaffe好好咖啡餐廳提供早午餐、輕食、甜點、咖啡等簡單料理，話說不只早午餐好吃，連千層蛋糕也是網友推薦必點之一！</br><br><br> (圖片來源：HaoHaoKaffe好好咖啡臉書)</br></br></div>
+                    </div>
+                </div>
+                <div class="part7">
+                    <h1>3、桃園縣 <a href="https://www.facebook.com/%E5%8D%A1%E6%89%98%E7%B1%B3%E5%88%A9%E5%BA%AD%E5%9C%92%E5%92%96%E5%95%A1%E7%B2%89%E7%B5%B2%E5%9C%98-268885293132139/"target="_blank">卡托米利庭園咖啡</a></h1>
+                    <br><h2><br>地址：桃園縣新屋鄉蚵間村蚵殼港6鄰55-5號</br><br>營業時間：每日10:00至18:00</br><br>預約電話：(03) 4768668</br></h2></br>
+                    <div class="photo7">
+                        <img src="/1x/卡1.jpg">
+                        <div class="word7">卡托米利庭園咖啡館以藍白色地中海風格為主的異國建築，庭園內有一片綠油油的草地，搭配上隨便拍隨便好看的藝術造景，整體營造出相當浪漫的用餐環境，當然更是很棒的寵物友善餐廳。</br><br>(圖片來源：卡托米利庭園咖啡臉書)</br></div>
+                    </div>
+                    <div class="photo7-1">
+                        <img src="/1x/卡2.jpg"width="500px"height="300px">
+                        <div class="word7-2"><br>室內裝潢則以藍白顏色交替的磁磚，跳色設計讓餐廳看起來相當明亮；除了餐廳內的用餐區外，庭園也有戶外用餐區，帶狗狗到這裡用餐時，放養牠們到處奔跑也沒關係！</br><br>(圖片來源：卡托米利庭園咖啡臉書)</br></div>
+                    </div>
+                    <div class="photo7-2">
+                        <img src="/1x/卡3.jpg"width="500px"height="300px">
+                        <div class="word7-3"><br>卡托米利庭園咖啡館除了提供精緻排餐、下午茶、甜點及咖啡以外，也可預約婚紗拍攝、宴客、派對等場地，當然寵物聚會也非常歡迎～</br><br>(圖片來源：卡托米利庭園咖啡臉書)</br></div>
+                    </div>
+                </div>
+                <div class="button"><a href="/html/fun/fun.html"style="text-decoration:none;">BACK</a></div>
+            </div>
         </div>
     </body>
 </html>
