--- a/html/fun/fun2.html
+++ b/html/fun/fun2.html
@@ -11,97 +11,92 @@
     <body>
         <div class="article">
             <div class="money-title">
-                <img src="/1x/北部.png"width="650px"height="200px">
+                <img src="/1x/中部推薦.png"width="650px"height="200px">
             </div>
             <div class="content">
                 <div class="part0">
                     <h1>中部寵物友善住宿推薦</h1>
                 </div>
                 <div class="part1">
-                    <h1>1、台北市 <a href="https://americanvillage.ezhotel.com.tw/"target="_blank">陽明山美國渡假村</a></h1>
-                    <br><h2><br>地址：台北市士林區凱旋路61巷2弄2號</br><br>訂房電話：0963-268580</br><br>寵物公約：寵物可一起入住，每棟最多兩隻寵物，若超過將收清潔費500元，入住前須先告知寵物數量與品種。</br></h2></br>
+                    <h1>1、苗栗縣 <a href="https://www.doghowls.com.tw/accommodation/regulation/"target="_blank">逗號民宿</a></h1>
+                    <br><h2><br>地址：苗栗縣南庄鄉南江村17鄰福南58號</br><br>訂房電話：0975-820058</br><br>寵物公約：每一房入住寵物最多限住三隻，每隻收清潔費500元；入住當日，每房將收取保證金1000元，退房時若無任何破壞或損失，全額退還。</br></h2></br>
                     <div class="photo1">
-                        <img src="/1x/北1.png">
-                        <div class="word1"><br>充滿美式格調的陽明山美國渡假村，規劃間間為獨棟式別墅住宿，提供包棟、親子家庭等房型選項，此外到此度假入住時，絕對要預訂這裡美式BBQ，這樣才能完整感受美式渡假風情。</br><br> (圖片來源：陽明山美國渡假村臉書)</br></div>
+                        <img src="/1x/苗1.png">
+                        <div class="word1"><br>苗栗南庄的逗號民宿建築外觀走清新風格，且設計概念以寵物為主軸，室內更給人如自家般的舒服自在，對於喜愛帶上毛孩出外旅遊的毛父母來說，逗號民宿十分推薦入住！</br><br>（圖片來源：逗號民宿臉書）</br></div>
                     </div>
                     <div class="photo1-1">
-                        <img src="/1x/北2.png">
-                        <div class="word1-1"><br>從入口到園內沿路的紅磚屋環繞著綠意逢勃的榕樹和樟樹，庭院別墅前皆有白色矮圍籬以及花園草坪，離開圍籬後，映入眼簾的還有百坪綠色大草皮，那景象讓人真以為置身於國外。</br><br> (圖片來源：陽明山美國渡假村臉書)</br></div>
+                        <img src="/1x/苗2.png">
+                        <div class="word1-1"><br>民宿也規劃有寵物運動場供毛孩們一起玩耍、交朋友，另外即便玩到滿身泥沙也沒關係，民宿入口處設置了寵物梳洗區(備有桌子、水龍頭)，幫毛孩簡單沖洗後就能乾淨溜溜地進房休息。</br><br>（圖片來源：逗號民宿臉書）</br></div>
+                        <div class="word1-2"><br>此外最值得一提的是，這裡可指定入住「高齡犬照護房型｣，此房型房內的地板特別鋪設了防滑地墊，讓高齡犬可以住的安心舒適。</br><br>由於民宿共有千坪大草地，因此每房都有專屬的後院小草地，給怕生的小狗狗們一個不受打擾的遊戲空間，而毛父母們則可以悠哉坐在木椅上靜看毛孩們奔跑的開心模樣，這不就是夢寐的幸福時光嗎？</br></div>    
                     </div>
                 </div>
                 <div class="part2">
-                    <h1>2、宜蘭縣 <a href="https://ksa.oks.tw/order.php"target="_blank">卡拉松villa民宿</a></h1>
-                    <br><h2><br>地址：宜蘭縣冬山鄉安中路36號</br><br>訂房電話：0933-103789 / (03) 9592515</br><br>寵物公約：每個房間僅兩隻寵物以下不用收任何清潔費，每超過一隻加收300元，以此類推。</br></h2></br>
+                    <h1>2、台中市 <a href="https://sunnyhouse.mmweb.tw/?fbclid=IwAR00rShwUvfQ-pHjUYEELaa5DPGuZD2FWsF9ng-P8SGsh8ZvQn8L8_Z5bpU"target="_blank">閑庭閣民宿</a></h1>
+                    <br><h2><br>地址：台中市石岡區豐勢路77巷26號</br><br>訂房電話：0953-805469</br><br>寵物公約：寵物可進房入住，每隻寵物加收清潔費500元，並替狗狗包紙尿布，若發生狗狗尿床等情形，必須賠償2000元。</br></h2></br>
                     <div class="photo2">
-                        <img src="/1x/宜1.png"width="450px"height="450px">
-                        <div class="word2"><br> 卡松安villa民宿最吸引人入住的地方，莫過於充滿濃濃峇里島南洋風格的建築，園內從迎賓入口、象神擺設等裝飾品都是老闆專程從峇里島運回台灣，甚至連滿腹樹木花草都以南洋植物為主，此外，園內乾淨且用心維護的草皮，非常適合毛孩與小孩到處跑跳。</br><br> ( (圖片來源：卡拉松villa民宿臉書)</br></div>
+                        <img src="/1x/閑1.jpg"width="450px"height="450px">
+                        <div class="word2"><br>隱身於巷弄間的閑庭閣民宿是一處老古厝，純樸又帶有老宅味道的住所，前後院種植許多花草增添生氣，室內則以木製家俱、乾燥花、綠意盆栽及茶器點綴每一個角落，使靜謐的老宅能夠呈現歲月靜好的最佳狀態。</br><br> （圖片來源：閑庭閣民宿官網）</br></div>
                     </div>
                     <div class="photo2-1">
-                        <img src="/1x/宜2.png"width="450px"height="450px">
-                        <div class="word2-1"><br>渡假民宿整個區域特地築起圍牆，確保每一間房客可以在富有隱私的villa空間中享受渡假生活，而且小孩與毛孩在這裡奔跑玩耍都非常安全，整體舒適愜意的程度，讓人自踏進民宿之後彷彿偽出國般去到了峇里島！</br><br>  (圖片來源：卡拉松villa民宿臉書)</br></div>
-                        <div class="word2-2"><br>卡松安villa民宿的房型都以獨棟獨立式為主，每棟房間門口還有專用的露天小花園，夜晚可以跟孩子們一起在院子幸福地欣賞滿天星星。</br></div>
+                        <img src="/1x/閑2.jpg"width="450px"height="450px">
+                        <div class="word2-1"><br>閑庭閣民宿僅提供4人以下的住宿空間，但相對地活動空間卻變多了，不論家庭帶寵物旅遊、獨自放空之旅，這裡都能讓你獲得高品質的休憩環境，更是一間猶如家那般溫馨的寵物民宿！</br><br>（圖片來源：閑庭閣民宿官網）</br></div>
+                    </div>
+                    <div class="photo2-2">
+                        <img src="/1x/閑3.jpg"width="450px"height="450px">
+                        <div class="word2-1"></br><br>（圖片來源：閑庭閣民宿官網）</br></div>
                     </div>
                 </div>
                 <div class="part3">
-                    <h1>3、桃園縣 <a href="https://www.lidoresort.com.tw/Content/room/room_cont.aspx?MSid=652537633140662460&SiteID=20&MmmID=202001#ad-image-ctl00_CPContent_rpDataP_ctl00_hyPicLink"target="_blank">東森山林渡假酒店</a></h1>
-                    <br><h2><br>地址：桃園市楊梅區東森路3號</br><br>訂房電話：0800-889168</br><br>寵物公約：專屬寵物客房可同房入住一隻寵物(限犬貓)，每增加一隻寵物將酌收清潔費400元(含寵物備品)</br></h2></br>
+                    <h1>3、南投縣 <a href="https://www.lookbnb.tw/booking/"target="_blank">路殼民宿</a></h1>
+                    <br><h2><br>地址：南投縣魚池鄉大林村永川巷22-6號</br><br>訂房電話：0907-446657</br><br>寵物公約：每房限小型寵物兩隻內，限中大型犬一隻；寵物有特定入住房型，需收寵物清潔費600元（過年期間800元）。</br></h2></br>
                     <div class="photo3">
-                        <img src="/1x/桃1.png">
-                        <div class="word3"><br>東森山林渡假酒店坐落於桃園楊梅座山之中，飯店坐擁60萬坪的森林綠地，屬於台灣少有的複合式山林渡假勝地，吃喝玩樂通通可以在渡假飯店內獲得滿足。例如山林美人湯、SPA芳療、室內外泳池、生態步道、健身房、寵物運動場等等。</br><br> (圖片來源：東森山林渡假酒店臉書)</br></div>
-                        <div class="word3-1"><br>此外，也常常舉辦各種親子活動可參加，讓所有家庭與毛孩不必再舟車勞頓、不用再費心找住宿、景點和餐廳，東森山林渡假酒店應有盡有！</br></div>
+                        <img src="/1x/南1.png">
+                        <div class="word3"><br>南投魚池鄉的路殼民宿鄰近日月潭風景區、九族文化村等知名景點，民宿四周環山可盡收山嵐美景。住宿環境分別有前棟和後棟建築，前棟主打清水模輕工業風，後棟則走歐洲古典風格。</br><br> （圖片來源：路殼民宿臉書）</br></div>
+                        <div class="word3-1"><br>民宿園內擁有滿滿的綠意植栽，整個環境氛圍讓人格外放鬆～此外，每天下午時分，前棟大廳還會提供下午茶點心，讓入住的房客可盡情享用。而三樓餐廳因寵物禁止入內，因此規劃了戶外用餐區，用餐的同時還能欣賞山景挺棒的！</br></div>
                     </div>
                     <div class="photo3-1">
-                        <img src="/1x/桃2.png"width="500px"height="300px">
-                        <div class="word3-2"><br> 東森山林生態園區中，特別打造的寵物運動場設施，包括跨欄、蹺蹺板、A字梯、彎道等等。另外室內也有規劃毛孩的活動空間，不管度假期間的天氣如何，狗狗們一樣能在室內自由玩耍、盡情奔跑！</br><br>(圖片來源：東森山林渡假酒店臉書)</br></div>
-                    </div>
-                    <div class="photo3-2">
-                        <img src="/1x/桃3.png"width="500px"height="300px">
-                        <div class="word3-3"><br>寵物住宿空間獨立於歐式建築內，每間房間皆有15坪大小，且房內備有寵物床、寵物餐桌、尿盆、空氣清淨機，以送上一個寵物旅行包。</br><br>(圖片來源：東森山林渡假酒店臉書)</br></div>
+                        <img src="/1x/南2.jpg"width="500px"height="300px">
+                        <div class="word3-2"><br> 寵物友善房型位於後棟一樓，間間相當寬敞且更有專屬小庭院，讓毛孩每天能自在地遊玩。更貼心的是，房內會備好寵物慢食碗、尿布墊和鮮食一包當作入住小禮物。</br><br>（圖片來源：路殼民宿官網）</br></div>
                     </div>
                 </div>
                 <div class="part4">
-                    <h1>北部寵物友善餐廳推薦</h1>
+                    <h1>中部寵物友善餐廳推薦</h1>
                 </div>
                 <div class="part5">
-                    <h1>1、台北市 <a href="https://www.facebook.com/thecafeby1/"target="_blank">The cafe’ by 想陽明山</a></h1>
-                    <br><h2><br>地址：台北市士林區光華路30號</br><br>營業時間：每日11:00至20:30</br><br>預約電話：(02) 28626628</br></h2></br>
+                    <h1>1、苗栗縣 <a href="http://www.rosecoffee.com.tw/inp_res_02.html"target="_blank">山行玫瑰</a></h1>
+                    <br><h2><br>地址：苗栗縣南庄鄉東河村12鄰橫屏背25-1號</br><br>營業時間：每日10:00至18:00</br><br>預約電話：(037) 824938</br></h2></br>
                     <div class="photo5-1">
-                        <img src="/1x/楊1.png"width="450px"height="400px">
-                        <div class="word5-1">The cafe’ by 想陽明山顧名思義，位於陽明山上的庭園餐廳，整體建築走白色美式鄉村風格，庭園一片綠意盎然的草皮和植栽樹木，襯托著清新質感的建職，讓人一走進來就能感受到舒適氛圍的環境。<br><br>(圖片來源：想陽明山臉書)</br></br></div>
+                        <img src="/1x/山1.jpg"width="450px"height="400px">
+                        <div class="word5-1"><br>苗栗山行玫瑰是隱身於苗栗南庄山上的寵物友善餐廳，山裡的空氣清新，是個足以令人相當放鬆的景觀莊園。</br><br>園內也有超多花花草草陪襯在遊客左右，大人小孩與狗狗很難不浸淫在大自然的芬多精當中！</br><br><br>(圖片來源：山行玫瑰官網)</br></br></div>
                     </div>
                     <div class="photo5-2">
-                        <img src="/1x/楊2.png"width="450px"height="400px">
-                        <div class="word5-2">想陽明山主要供應義式創意料理，餐點食材強調新鮮、天然健康，各式排餐、主套餐、甜點供選擇，如果要舉辦寵物派對也沒問題～一般寵物進入室內必須有寵物包或寵物推車，而大毛孩則會直接安排在戶外用餐區，可一邊用餐一邊踩踩草皮，其實反而比在室內用餐更愜意、自在。<br><br>(圖片來源：想陽明山臉書)</br></br></div>
-                        <div class="word5-3"><br>而且園內有多株落羽松與櫻花樹，不管哪個季節來這裡用餐，欣賞怡人景致之餘，還能跟毛孩一起享用精緻的西式餐點，魚水兼得！</br></div>
+                        <img src="/1x/山2.png"width="450px"height="400px">
+                        <div class="word5-2">這裡的友善寵物的用餐區位在一樓戶外，其實就算夏天沒有冷氣還是相當涼爽，不用擔心炎熱天氣下要跟毛孩在戶外用餐，這就是到山區景觀餐廳用餐的最大優點。<br><br>(圖片來源：山行玫瑰官網)</br></br></div>
+                        <div class="word5-3"><br>山行玫瑰提供各式簡餐、飲品和輕食可選擇，邊享用美食的時候，還能跟心愛的毛孩一起盡收深山森林之美，老實說這樣的機會真的不多，有機會來到苗栗南庄遊玩的毛父母們絕對不能錯過！</br></div>
                     </div>
                 </div>
                 <div class="part6">
-                    <h1>2、宜蘭縣 <a href="https://www.facebook.com/haohaokaffe"target="_blank"> HaoHaoKaffe好好咖啡</a></h1>
-                    <br><h2><br>地址：宜蘭縣五結鄉中正路一段2巷125號</br><br>營業時間：每日10:00至18:00(周三/周四公休)</br><br>預約電話：(03) 9558281</br></h2></br>
+                    <h1>2、台中市<a href="https://www.facebook.com/rainbow.hill.house101/"target="_blank">彩虹山舍</a></h1>
+                    <br><h2><br>地址：台中市石岡區和盛街南眉巷10號</br><br>營業時間：每週六日11:00至20:00</br><br>預約電話：(04) 25816677</br></h2></br>
                     <div class="photo6-1">
-                        <img src="/1x/宜蘭2.png"width="450px"height="400px">
-                        <div class="word6-1"><br>這間是宜蘭市區少數的寵物友善餐廳，寵物入內只要繫繩就可以陪同用餐。室內室外皆有用餐區可入座。</br><br>如果你家狗狗比較怕生，可以直接選擇室外，天氣好的時候，陽光和煦，幸運的話可以欣賞到不錯的風景。</br><br><br> (圖片來源：HaoHaoKaffe好好咖啡臉書)</br></br></div>
+                        <img src="/1x/彩1.png"width="450px"height="400px">
+                        <div class="word6-1">彩虹山舍為台中石岡最新打卡的景點餐廳，位居半山腰的特殊位置的緣故，白天或夜晚都可以眺望東勢周邊的景色。</br><br>園區內因設置不少繽紛活潑的藝術裝置，吸引許多家庭帶孩子、狗狗前來朝聖，其中紅裙女孩、鋼琴樓梯、彩虹蠟筆圍牆更是超夯的拍照背景。<br><br>(圖片來源：彩虹山舍臉書)</br></br></div>
                     </div>
                     <div class="photo6-2">
-                        <img src="/1x/宜蘭1.png"width="450px"height="400px">
-                        <div class="word6-2">HaoHaoKaffe好好咖啡位於羅東林場文化園區西側門旁，特色招牌上有隻狗狗圖案就是店狗阿金，雖然沒有機會再見到阿金，但老闆將愛犬的信念投注於餐廳上，把愛延續下去。<br><br>(圖片來源：HaoHaoKaffe好好咖啡臉書)</br></br></div>
-                        <div class="word6-3"><br>HaoHaoKaffe好好咖啡餐廳提供早午餐、輕食、甜點、咖啡等簡單料理，話說不只早午餐好吃，連千層蛋糕也是網友推薦必點之一！</br><br><br> (圖片來源：HaoHaoKaffe好好咖啡臉書)</br></br></div>
+                        <img src="/1x/彩2.png"width="450px"height="400px">
+                        <div class="word6-2">這裡除了是友善景觀餐廳之外，也提供寵物住宿且不用收寵物清潔費，寵物用餐區同樣也是裝潢得相當用心，鮮豔的裝置藝術別有特色，隨便給狗狗拍照都能拍得很美、玩得很盡興！<br><br>(圖片來源：彩虹山舍臉書)</br></br></div>
                     </div>
                 </div>
                 <div class="part7">
-                    <h1>3、桃園縣 <a href="https://www.facebook.com/%E5%8D%A1%E6%89%98%E7%B1%B3%E5%88%A9%E5%BA%AD%E5%9C%92%E5%92%96%E5%95%A1%E7%B2%89%E7%B5%B2%E5%9C%98-268885293132139/"target="_blank">卡托米利庭園咖啡</a></h1>
-                    <br><h2><br>地址：桃園縣新屋鄉蚵間村蚵殼港6鄰55-5號</br><br>營業時間：每日10:00至18:00</br><br>預約電話：(03) 4768668</br></h2></br>
+                    <h1>3、南投縣 <a href="https://www.facebook.com/coneyhouse/photos/?ref=page_internal"target="_blank">可妮小屋</a></h1>
+                    <br><h2><br>地址：南投縣埔里鎮西安路二段77號</br><br>營業時間：平日11:00至17:00｜假日11:00至21:00</br><br>預約電話：(04) 92930079</br></h2></br>
                     <div class="photo7">
-                        <img src="/1x/卡1.jpg">
-                        <div class="word7">卡托米利庭園咖啡館以藍白色地中海風格為主的異國建築，庭園內有一片綠油油的草地，搭配上隨便拍隨便好看的藝術造景，整體營造出相當浪漫的用餐環境，當然更是很棒的寵物友善餐廳。</br><br>(圖片來源：卡托米利庭園咖啡臉書)</br></div>
+                        <img src="/1x/可1.png">
+                        <div class="word7"><br>南投埔里小鎮上的可妮小屋充滿著地中海風情，雖然餐廳佔地不大，但整體帶有童話風格的建築，也為旅途作短暫休息，順便飽餐一頓。</br><br> (圖片來源：可妮小屋臉書)</br></div>
                     </div>
                     <div class="photo7-1">
-                        <img src="/1x/卡2.jpg"width="500px"height="300px">
-                        <div class="word7-2"><br>室內裝潢則以藍白顏色交替的磁磚，跳色設計讓餐廳看起來相當明亮；除了餐廳內的用餐區外，庭園也有戶外用餐區，帶狗狗到這裡用餐時，放養牠們到處奔跑也沒關係！</br><br>(圖片來源：卡托米利庭園咖啡臉書)</br></div>
-                    </div>
-                    <div class="photo7-2">
-                        <img src="/1x/卡3.jpg"width="500px"height="300px">
-                        <div class="word7-3"><br>卡托米利庭園咖啡館除了提供精緻排餐、下午茶、甜點及咖啡以外，也可預約婚紗拍攝、宴客、派對等場地，當然寵物聚會也非常歡迎～</br><br>(圖片來源：卡托米利庭園咖啡臉書)</br></div>
+                        <img src="/1x/可2.png"width="500px"height="300px">
+                        <div class="word7-2"><br>餐廳室內用餐區因為不大，所以戶外特別設置了南瓜用餐區，猶如身歷在童話故事當中的主角那樣，當然，毛孩來這裡也不會感到無聊，可無拘束地在草地上走走、嗅一嗅青草香。</br><br> (圖片來源：可妮小屋臉書)</br></div>
                     </div>
                 </div>
                 <div class="button"><a href="/html/fun/fun.html"style="text-decoration:none;">BACK</a></div>
