--- a/html/fun/fun4.html
+++ b/html/fun/fun4.html
@@ -16,93 +16,57 @@
             <div class="content">
                 <div class="part0">
                     <h1>花蓮高評價的友善餐廳+住宿+景點</h1>
+                    <h2><br>花蓮是一座擁有豐富自然景觀資源的城市，美麗的海岸線景觀堪稱是台灣第一，不僅可欣賞到免費的鬼斧山景，還能放空徜徉在無際的海岸邊，以及各種特色風格的花蓮寵物友善民宿任你挑選，當然寵物友善的餐廳、寵物友善景點也不少！</br></h2>
+                </div>
+                <div class="part0-1">
+                    <h1>花蓮市寵物友善景點</h1>
                 </div>
                 <div class="part1">
-                    <h1>1、嘉義市<a href="https://www.facebook.com/a2202633/?ref=br_rs/"target="_blank">悅來居莊園</a></h1>
-                    <br><h2><br>地址：嘉義縣民雄鄉秀林村林子尾75-3號</br><br>訂房電話：(05) 2202633</br><br>寵物公約：可攜帶寵物入住歐式木屋，須加收清潔費：10公斤以下每隻200元；10公斤以上每隻300元。</br></h2></br>
+                    <h1><span style="color:rgb(4, 21, 250)">花蓮最美秘境—</span><a href="https://www.rocktail.com.tw/article/view/161"target="_blank">景觀玻璃屋</a></h1>
+                    <br><h2><br>地址：花蓮縣壽豐鄉鹽寮山嶺9-6號</br><br>營業時間：星期一至五／星期天：早上9:00至晚上8:00星期六：早上9:00至晚上11:00</br></h2></br>
                     <div class="photo1">
-                        <img src="/1x/民1.png">
-                        <div class="word1"><br>悅來居莊園是嘉義少數的寵物友善住宿，特色白色小木屋，搭配翠綠草皮、橘紅色的落羽松等自然裝飾，整個莊園猶如一座童話叢林中的小鎮。此外，遼闊且翠綠的大草皮更讓人覺得療癒至極</br><br>（圖片來源：悅來居莊園臉書）</br></div>
+                        <img src="/1x/花1.jpg">
+                        <div class="word1"><br>花蓮最新最美的秘境景點，就是位於壽豐鄉且近遠雄大飯店的『景觀玻璃屋』。</br><br>周邊知名的景點很多，且緊鄰「東山樂園」和「遠雄海洋公園」，很適合規劃一家大朋友、小朋友到附近玩一整天，如果順遊到這裡，剛好也能給毛孩們在這裡放風、奔跑、曬日光浴！</br></div>
+                        <div class="word1-1-1"><br>『景觀玻璃屋』是屬私人觀光景點，專門給遊客到此賞景拍照，不是餐廳也不是咖啡廳，雖不提供餐點但可以自帶外食，甚至還招待餅乾、飲品，另外也有設置桌椅、廁所給遊客使用，重點是完全不收服務費、清潔費，整個就是走佛系經營的概念！</br><br>（圖片來源：<a href="https://www.facebook.com/mollyxmochi/?__cft__%5b0%5d=AZVLnCI4urFttJ1l9Anvmkq-VVyxBpc_vT2QU2-5ziSSjAGVFFwKMu_sKX-45sC7XtLz5xJCaUeC2hhjICD85tOZVgu7xoDW97eoouGDt8jfSa1aQqAEXMMjeS_nfB1iUivePdYh_AFL7I0WNZzM76x_9fSaK-DXKszXSUaRBxK46Q&__tn__=kC%2CP-y-R">瑪吉的吉 mollyxmochi</a>）</br></div>  
                     </div>
                     <div class="photo1-1">
-                        <img src="/1x/民2.png">
-                        <div class="word1-1"><br>園區內不僅有毛孩最愛的綠油油草皮，也特別在某一區擺放了跳跳馬、搖搖馬、滑步車、蹺蹺板等設施，讓入住的孩子們可以盡情玩樂～</br><br>（圖片來源：悅來居莊園臉書）</br></div>
-                        <div class="word1-2">每個獨棟小木屋都有獨立的戶外小庭院，且皆是獨立出入口及停車位，到了夜晚時分還能坐在室外賞月觀星，讓人無不感受到這裡的悠閒舒適。</div>
+                        <img src="/1x/花2.jpg">
+                        <div class="word1-1"><br>若從至高點由上下俯瞰，可以看到花蓮出海口以及如月牙般的美麗海灣，還有一座座崎嶇的山脈森林，往遠處看可找到知名七星潭，更遠處看則會發現宜蘭新大陸唷～</br></div>
+                        <div class="word1-2"><br>這裡完整收錄了全花蓮最美的海景、山景、峽谷、日出雲彩和日落晚霞，而且毛孩們還可以盡情地自在玩耍，相信再也沒有比這裡更適合網羅各式特色景觀的地方了，若有機會到花蓮旅遊時，記得列入午後行程唷！</br><br>（圖片來源：<a href="https://www.facebook.com/mollyxmochi/?__cft__%5b0%5d=AZVLnCI4urFttJ1l9Anvmkq-VVyxBpc_vT2QU2-5ziSSjAGVFFwKMu_sKX-45sC7XtLz5xJCaUeC2hhjICD85tOZVgu7xoDW97eoouGDt8jfSa1aQqAEXMMjeS_nfB1iUivePdYh_AFL7I0WNZzM76x_9fSaK-DXKszXSUaRBxK46Q&__tn__=kC%2CP-y-R">瑪吉的吉 mollyxmochi</a>）</br></div>
                     </div>
                 </div>
                 <div class="part2">
-                    <h1>2、台南市 <a href="https://www.facebook.com/snailpetsinn/?ref=page_internal"target="_blank">蝸聚</a></h1>
-                    <br><h2><br>地址：台南市中西區民生路一段157巷12號</br><br>訂房電話：0956-167168</br><br>寵物公約：可攜帶寵物入住，每隻須收300元清潔費和押金2000元，退房後檢查無任何問題全額退還。</br></h2></br>
-                    <div class="photo2">
-                        <img src="/1x/蝸1.png"width="450px"height="450px">
-                        <div class="word2"><br>位於台南市區巷弄間的蝸聚，一間外觀樸素的民宅，沒想到是個專屬寵物住宿的小天地。整棟建築中最讓人驚豔的區域，就是挑高的客廳空間，裏頭特別用心設計了木頭跳板、小矮房，不管大小毛孩入住的每一天都會玩得很開心！</br><br> （圖片來源：噓！tainan臉書）
-                        </br></div>
-                    </div>
-                    <div class="photo2-1">
-                        <img src="/1x/蝸2.png"width="450px"height="450px">
-                        <div class="word2-1"><br>此外最值得一提的，民宿更用心地在客廳區域，擺放了負離子清淨機，提升房客入住的環境品質，而且每個房間也有配置寵物清潔液、毛髮滾筒等清理小物，諸如此類的小貼心都藏在細節裡。</br><br>民宿房間有不同的主題性房型可選擇，還有，房間特別加裝了隔音海綿，小孩或毛孩玩瘋也不怕吵到其他房客。</br><br>（圖片來源：噓！tainan臉書）</br></div>
-                        <div class="word2-2"><br>另外，這裡的隱藏版樓中樓房型，還提供了寵物床，對於不方便帶睡床的毛父母來說簡直是神救援，畢竟給毛孩一個舒服睡覺的窩很重要呀！</br></div>
-                    </div>
+                    <h1>花蓮市寵物友善餐廳</h1>
                 </div>
                 <div class="part3">
-                    <h1>3、屏東縣<a href="https://www.facebook.com/pet.truelove/"target="_blank">寵愛月台</a></h1>
-                    <br><h2><br>地址：屏東縣恆春鎮山腳路78-10號</br><br>訂房電話：0977-110148</br><br>寵物公約：攜帶寵物需酌收清潔費一隻200元，入住每房會收取1000元保證金。</br></h2></br>
+                    <h1><a href="https://www.rocktail.com.tw/article/view/131"target="_blank">山度空間</a></h1>
+                    <br><h2><br>地址：花蓮縣壽豐鄉鹽寮村大坑57號</br><br>營業時間：每日上午9:30至下午5:00</br></h2></br>
                     <div class="photo3">
-                        <img src="/1x/屏1.png">
-                        <div class="word3"><br>屏東恆春鎮上的寵愛月台可是個不簡單的寵物友善民宿，一踏進去馬上就能擁抱一座美翻天的寵物游泳池，這裡也不只有提供住宿、泳池，也是間寵物友善餐廳，簡直就是南國渡假天堂！</br><br>（圖片來源：寵愛月台臉書）</br></div>
+                        <img src="/1x/度1.jpg">
+                        <div class="word3"><br>『山度空間』是花蓮有名的網紅旅遊景點，同時也是花蓮知名的<a href="https://www.rocktail.com.tw/article/restaurant">寵物友善餐廳</a>，如果你想帶著毛孩一起邊拍照、邊吃美食甜點，這裡會是一個很適合逗留許久的地方。</br><br>（圖片來源：<a href="https://www.facebook.com/permalink.php?story_fbid=1289501388061286&id=667006186977479">黃金姆姆Ｍｕ</a>)</br></div>
                     </div>
                     <div class="photo3-1">
-                        <img src="/1x/平2.png"width="500px"height="300px">
-                        <div class="word3-2"><br>這裡除了有精緻餐點和寵物餐外，還有一間專門販售寵物用品的商店，更貼心地準備了許多寵物設備和用品，例如寵物沖洗區、洗毛精，甚至有專業的寵物吹毛機。</br><br>（圖片來源：寵愛月台臉書)</br></div>
-                        <div class="word3-3"><br>每個房型都是獨棟建築，提供雙人房和四人房可選擇，室內擺設簡單乾淨，也有準備木製寵物睡床。</br><br>不只如此，連寵物餐都專程供應豐富營養的活力肉丸子，各種嚴選的新鮮食材現煮現做，相信毛孩們會吃得不亦樂乎。</br></div>
+                        <img src="/1x/度2.jpg">
+                        <div class="word3-2"><br>這裡除了有精緻餐點和寵物餐外，還有一間專門販售寵物用品的商店，更貼心地準備了許多寵物設備和用品，例如寵物沖洗區、洗毛精，甚至有專業的寵物吹毛機。</br>（圖片來源：<a href="https://www.facebook.com/permalink.php?story_fbid=1289501388061286&id=667006186977479">黃金姆姆Ｍｕ</a>)</br></div>
                     </div>
                 </div>
                 <div class="part4">
-                    <h1>南部寵物友善餐廳推薦</h1>
+                    <h1>花蓮市寵物友善住宿推薦</h1>
                 </div>
                 <div class="part5">
-                    <h1>1、嘉義市 <a href="https://www.facebook.com/MIXED666/"target="_blank">米克斯寵物餐廳</a></h1>
-                    <br><h2><br>地址：嘉義市西區青年街164號</br><br>營業時間：每日11:00-20:00(公休日於官網公布)</br><br>預約電話：05-2366588</br></h2></br>
+                    <h1><a href="https://www.facebook.com/MIXED666/"target="_blank">鮭魚歸魚民宿</a></h1>
+                    <br><h2><br>地址：花蓮市建國路二段790號</br><br>連絡電話：0966-730267</br></h2></br>
                     <div class="photo5-1">
-                        <img src="/1x/米1.png"width="450px"height="400px">
-                        <div class="word5-1"><br>（圖片來源:米克斯寵物友善餐廳臉書)</br></div>
+                        <img src="/1x/鮭魚1.jpg"width="460px"height="280px">
+                        <div class="word5-1"><br>『鮭魚歸魚民宿』從花蓮火車站搭車的交通路程約十分鐘左右，鄰近花蓮知名的戲水景點「砂婆礑溪」，以住宿地點和方便性來說還算不錯～而帶著毛孩的你想必對住宿的環境很講究吧，一來可以入住同間房的寵物友善並不多，而來太過吵雜的地點容易讓毛孩感到不安，所以要住就要住像『鮭魚歸魚民宿』這樣鬧中取靜的寵物友善民宿囉～</br><br>（圖片來源：<a href="https://www.facebook.com/salmonbnb/photos">鮭魚歸魚民宿</a>）</br></div>
                     </div>
                     <div class="photo5-2">
-                        <img src="/1x/米2.png"width="450px"height="400px">
-                        <div class="word5-2">米克斯寵物友善餐廳,位於嘉義西區，店內有兩隻店狗（帕扣、摩卡）可愛又討人喜歡，但因考慮到有些客人會怕狗或有狗之間的衝突，所以若想看可愛的店狗記得要提前跟老闆說呦！<br><br>（圖片來源:米克斯寵物友善餐廳臉書）</br></br></div>
+                        <img src="/1x/鮭魚2.jpg"width="450px"height="400px">
+                        <div class="word5-2">『鮭魚歸魚民宿』特別將一樓大廳挑高，為的就是讓來到這裡的旅客深感放鬆的感覺，而顯眼的花繪彩牆讓整個氛圍都活潑了起來，整體展露出如同自家般的溫馨，跟三五好友同坐在大廳裡喝茶、聊天完全不會有拘束的感覺！<br><br>（圖片來源：<a href="https://www.facebook.com/salmonbnb/photos">鮭魚歸魚民宿</a>）</br></br></div>
                     </div>
                     <div class="photo5-3">
-                        <img src="/1x/米3.jpg"width="450px"height="400px">
-                        <div class="word5-3">所有餐點皆由老闆親自設計、調配營養比例所製成，不僅擺盤漂亮更是吃得安心又美味，除此之外，更有提供狗狗餐點，使主人與狗狗能在店內一同享受，不僅如此，在店內狗狗可以自由上下沙發、走動，就如在家中般舒適。br><br>（圖片來源:米克斯寵物友善餐廳臉書)</br></br></div>
-                    </div>
-                    <div class="photo5-4">
-                        <img src="/1x/米4.png"width="450px"height="400px">
-                        <div class="word5-4">若想為狗狗舉辦聚會或慶祝，米克斯是一個很好的選擇。吃完餐後也可以到旁邊公園走走散步，釋放毛小孩的精力<br><br>（圖片來源:米克斯寵物友善餐廳臉書)</br></br></div>
-                    </div>
-                </div>
-                <div class="part6">
-                    <h1>2、台南市<a href="https://www.facebook.com/tainantnag/"target="_blank">項圈工場主題寵物餐廳</a></h1>
-                    <br><h2><br>地址：台南市南區夏林路369號</br><br>營業時間：每日11:00至20:30</br><br>預約電話：0985-327588</br></h2></br>
-                    <div class="photo6-1">
-                        <img src="/1x/向1.png"width="450px"height="400px">
-                        <div class="word6-1">項圈工場主題寵物餐廳很明顯不只賣餐點，還是一間可專為毛孩訂做專屬項圈的商家，室內座位並不多，主要多了個手作項圈專區，所以用餐環境有限。</br><br><br>(圖片來源：項圈工場主題寵物餐廳)</br></br></div>
-                    </div>
-                    <div class="photo6-2">
-                        <img src="/1x/向2.png"width="450px"height="400px">
-                        <div class="word6-2">友善餐廳開放讓毛孩可自由活動，但還是得叮嚀毛父母隨時注意自家狗狗，以免跟其他狗狗起衝突或是打擾到其他客人。再來，用完餐到室外拍拍照時，因為有安全圍籬，所以就算讓毛孩奔跑、玩耍也不擔心亂跑出去！<br><br>(圖片來源：項圈工場主題寵物餐廳)</br></br></div>
-                        <div class="word6-3"><br>餐點有兩種寵物餐點可選擇：一、健康雞肉餐，以雞肉捲搭配澱粉、蔬菜；二、鮮美肉丸子蓋飯，以肉類為主食，將雞肉做成肉丸子。另外，用餐的時候，店家還會提供寵物使用的湯匙和碗盤，相當貼心！</br></div>
-                    </div>
-                </div>
-                <div class="part7">
-                    <h1>3、屏東縣 <a href="https://www.facebook.com/FatchunCafe/"target="_blank">肥春號 Fatchun Café</a></h1>
-                    <br><h2><br>地址：屏東縣恆春鎮糠林南路15號</br><br>營業時間：每日</br><br>預約電話：(08) 8899855</br></h2></br>
-                    <div class="photo7">
-                        <img src="/1x/肥1.png">
-                        <div class="word7"><br>南投埔里小鎮上的可妮小屋充滿著地中海風情，雖然餐廳佔地不大，但整體帶有童話風格的建築，也為旅途作短暫休息，順便飽餐一頓。</br><br>(圖片來源：肥春號 Fatchun Café臉書)</br></div>
-                    </div>
-                    <div class="photo7-1">
-                        <img src="/1x/肥2.png"width="500px"height="300px">
-                        <div class="word7-2"><br>肥春號咖啡廳提供的餐點包含薄餅、捲餅、早午餐以及咖啡、其他飲品等，其中，近期主打創意低溫烹調的料理，強調無油少鹽、健康無負擔，喜愛追求健康飲食的毛父母可以嘗試看看！</br><br>(圖片來源：肥春號 Fatchun Café臉書)</br></div>
+                        <img src="/1x/鮭魚3.jpg"width="420px"height="270px">
+                        <div class="word5-3">民宿主人的毛孩_小美（一隻狐狸狗），也是店裡的管家經理，進門前都要先通過牠的「嗅嗅」考驗～因為『鮭魚歸魚民宿』是一間寵物友善民宿，所以入住前只要事前告知民宿主人會著毛孩一同入住，他們便會親切地款待你家的毛孩，順便跟店經理小美做個朋友吧！<br><br>（圖片來源：<a href="https://www.facebook.com/salmonbnb/photos">鮭魚歸魚民宿</a>）</br></br></div>
                     </div>
                 </div>
                 <div class="button"><a href="/html/fun/fun.html"style="text-decoration:none;">BACK</a></div>
