--- a/html/money.html
+++ b/html/money.html
@@ -28,7 +28,7 @@
                             <li><a href="/html/fun/fun.html">狗狗遊憩</a></li>
                         </ul>
                     </li>
-                    <li><a href="#about">關於我們</a></li>
+                    <li><a href="/html/about.html">關於我們</a></li>
                     </ul>
                 </div>
             </div> 
