--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="index.html">浪與不浪</a></li>
                     <li><a  href="/html/page2.html">狗狗小知識</a>
                     </li>
-                    <li><a href="#about">關於我們</a></li>
+                    <li><a href="/html/about.html">關於我們</a></li>
                     </ul>
                 </div>
             </div> 
