--- a/html/meat.html
+++ b/html/meat.html
@@ -11,7 +11,7 @@
     <body>
         <div class="article">
             <div class="content">
-            <br><h1>生食是什麼？狗狗生食前應該注意的幾件事</h1></br>
+            <img src="/1x/鮮食.png"width="650px"height="250px">
             <br><h2><br>要討論狗狗飲食前，我們要先來談談許多人會混淆的「鮮食」與「生食」之間的差異，</span><span style="color:rgb(252, 66, 66)">兩者都是屬於原型食物</span>，最大的辨認方式<span style="color:rgb(252, 66, 66)">是否亨煮過</span>。</br><br> 生食成份單純，多以肉類為主，對於狗狗的身體構造來說是非常能夠適應的，而且也能為狗狗帶來以下幾點好處：</br></h2></br>
             <div class="part1">
                 <h1><span style="color:rgb(31, 129, 241)">(1) 促進腸胃健康：</span></h1>
