--- a/html/med/med2.html
+++ b/html/med/med2.html
@@ -11,7 +11,7 @@
     <body>
         <div class="article">
             <div class="content">
-            <h1><br>章結二：毛孩洗了澡還是臭呼呼？</br></h1>
+            <h1><img src="/1x/洗澡還臭.png"width="650px"height="250px"></h1>
             <br><h2>由於狗狗天生皮脂分泌物較旺盛，這些分泌物與周遭環境的接觸，就會產生不好聞的氣味，那麼飼主要如何減少毛孩身上的體味呢？</h2></br>
             <div class="part1">
                 <h1><span style="color:rgb(31, 129, 241)">一、口腔清潔</span></h1>
