--- a/html/med/med3.html
+++ b/html/med/med3.html
@@ -11,7 +11,7 @@
     <body>
         <div class="article">
             <div class="content">
-            <h1><br>章結三：</br><br>狗狗常見皮膚病種類，預防方法不可不知</br></br></h1>
+            <h1><img src="/1x/皮膚病.png"width="650px"height="250px"></h1>
             <br><h2>-常見皮膚病原因</h2></br>
             <div class="part1">
                 <h1><span style="color:rgb(31, 129, 241)">換季氣候影響</span></h1>
