--- a/html/mind/mind4.html
+++ b/html/mind/mind4.html
@@ -11,7 +11,7 @@
     <body>
         <div class="article">
             <div class="content">
-            <h1><br>章節四：狗狗為何護食？護食怎麼辦？</br></h1>
+                <img src="/1x/護食.png"width="650px"height="250px">
             <div class="video">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/KeZHN4ku7Q8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
             </div>
