--- a/html/money.html
+++ b/html/money.html
@@ -46,13 +46,7 @@
     <body>         
         <div class="KW2"id="KW2">
             <div class="money-title" >
-                    <div class="Q">
-                        <div class="photo5"><img src="/1x/Q.png"></div>
-                        <div class="line"></div>
-                    </div>
-                    <div class="ret2">
-                        <div class="mword">狗狗的開銷？</div>
-                    </div>
+                <img src="/1x/狗開銷.png"width="650px"height="250px">
             </div>
             <div class="article1">
                 <div class="box11">
