--- a/html/snack.html
+++ b/html/snack.html
@@ -11,7 +11,7 @@
     <body>
         <div class="article">
             <div class="content">
-                <h1>零食如何挑選與注意事項</h1>
+                <img src="/1x/零食_工作區域 1.png"width="650px"height="250px">
                 <div class="part1">
                 <h1><span style="color:rgb(31, 129, 241)">1.成分：</span></h1>
                 <br><h2>避免挑選味道太香、顏色太亮、形狀不自然的零食，不能有人工添加物外，食材也建議選用天然、毛小孩能吃的食物。</h2></br>
