--- a/html/train/train.html
+++ b/html/train/train.html
@@ -75,7 +75,7 @@
                             <div class="circle3">
                                 <div class="photo3"><a href="/html/train/train3.html"><img src="/1x/333.png"width="210px"height="210px"></a></div>
                             </div>
-                            <div class="word3"><br>狗狗社會化</br></div>
+                            <div class="word3"><br>狗狗社會化最佳時機？</br></div>
                         </div>
                         <div class="med4">
                             <div class="circle4">
