--- a/html/train/train1.html
+++ b/html/train/train1.html
@@ -11,13 +11,7 @@
     <body>
         <div class="article">
             <div class="money-title">
-                <div class="Q">
-                    <div class="photo5"><img src="/1x/111.png"width="180px"height="200px"></div>
-                    <div class="line"></div>
-                </div>
-                <div class="ret2">
-                    <div class="mword"><br>養狗須知：</br>最多新手飼養需要的狗狗訓練</div>
-                </div>
+                <img src="/1x/新手訓練.png"width="650px"height="250px">
             </div>
             <div class="content">
                 <div class="part1">
