--- a/html/train/train2.html
+++ b/html/train/train2.html
@@ -11,13 +11,7 @@
     <body>
         <div class="article">
             <div class="money-title">
-                <div class="Q">
-                    <div class="photo5"><img src="/1x/222.png"width="180px"height="200px"></div>
-                    <div class="line"></div>
-                </div>
-                <div class="ret2">
-                    <div class="mword"><br>狗狗超愛搞破壞？</br>6種矯正方式秒變乖寶寶！</div>
-                </div>
+                <img src="/1x/狗破壞.png"width="650px"height="200px">
             </div>
             <div class="content">
                 <div class="part1">
