--- a/html/train/train4.html
+++ b/html/train/train4.html
@@ -11,13 +11,7 @@
     <body>
         <div class="article">
             <div class="money-title">
-                <div class="Q">
-                    <div class="photo5"><img src="/1x/444.png"width="180px"height="200px"></div>
-                    <div class="line"></div>
-                </div>
-                <div class="ret2">
-                    <div class="mword"><br>章節四：</br>訓練狗狗主人最常犯的5個NG行為！</div>
-                </div>
+                <img src="/1x/NG行為.png"width="650px"height="220px">
             </div>
             <div class="content">
             <div class="video">
