--- a/html/fresh.html
+++ b/html/fresh.html
@@ -11,7 +11,7 @@
     <body>
         <div class="article">
             <div class="content">
-            <h1>鮮食的好處，狗狗鮮食考量四大重點</h1>
+                <img src="/1x/生食.png"width="650px"height="250px">
             <br><h2>經過烹調的鮮食，相較之下比較沒有新鮮度及孳生細菌的問題。但是，營養元素均衡，也是鮮食必須注意的一大重點，接下來，我們來看準備狗狗鮮食需要注意的幾個重點：</h2></br>
             <div class="part1">
                 <h1><span style="color:rgb(31, 129, 241)">(1)營養比例：</span><span style="color:rgb(252, 66, 66)">澱粉-蛋白質-蔬果 = 1-1-1</span></h1>
@@ -39,8 +39,7 @@
             <div class="part5">
                 <h1><span style="color:rgb(31, 129, 241)">總結：</span></h1>
                 <h2>&emsp;&emsp;鮮食除了同樣是吃原型食物，沒有添加物疑慮之外，<span style="color:rgb(31, 129, 241)">最大的好處便是可以根據狗狗不同品種、不同時期、不同的健康狀態去調整食材運用。</span></h2></br>
-                <h3>&emsp;&emsp;但狗狗可能會對部分食材產生過敏反應，這就需仰賴飼主在一開始嘗試鮮食時，每次也少量做測試。<br>&emsp;&emsp;另外，有體重過重問題的狗狗，也可以透過鮮食來控制狗狗飲食與體重：你家毛孩太胖嗎？！幫狗狗減肥就靠這幾招！</br></h3>
-                <br><h4><span style="color:rgb(31, 129, 241)">延伸學習：<a href="https://www.youtube.com/watch?v=CTTM4_8Rb6w"target="_blank">鮮食自己做</a></span></h4></br>
+                <h3>&emsp;&emsp;但狗狗可能會對部分食材產生過敏反應，這就需仰賴飼主在一開始嘗試鮮食時，每次也少量做測試。<br>&emsp;&emsp;另外，有體重過重問題的狗狗，也可以透過鮮食來控制狗狗飲食與體重：你家毛孩太胖嗎？！幫狗狗減肥就靠這幾招！</br><br><span style="color:rgb(31, 129, 241)">延伸學習：<a href="https://www.youtube.com/watch?v=CTTM4_8Rb6w"target="_blank">鮮食自己做</a></span></br></h3>
             </div>
             <div class="button"><a href="/html/page2.html"style="text-decoration:none;">BACK</a></div>
             </div>
