--- a/html/med/med1.html
+++ b/html/med/med1.html
@@ -11,7 +11,7 @@
     <body>
         <div class="article">
             <div class="content">
-            <h1><br>章結一：狗狗為何要結紮？結紮對狗狗身體更好？</br></h1>
+            <h1><img src="/1x/狗結紮_工作區域 1.png"width="650px"height="250px"></h1>
             <div class="video">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/suj-ssL4r10" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
