--- a/html/mind/mind1.html
+++ b/html/mind/mind1.html
@@ -11,7 +11,7 @@
     <body>
         <div class="article">
             <div class="content">
-            <h1><br>章節一：狗真的改不了吃屎？狗狗吃屎原因及改善方法</br></h1>
+                <img src="/1x/狗吃屎.png"width="500px"height="200px">
             <div class="video">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/I9odkdOAwAs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
