--- a/html/mind/mind2.html
+++ b/html/mind/mind2.html
@@ -11,13 +11,7 @@
     <body>
         <div class="article">
             <div class="money-title">
-                <div class="Q">
-                    <div class="photo5"><img src="/1x/13.png"width="180px"height="200px"></div>
-                    <div class="line"></div>
-                </div>
-                <div class="ret2">
-                    <div class="mword">什麼是分離焦慮症？</div>
-                </div>
+                <img src="/1x/什麼是分離焦慮症_工作區域 1.png"width="650px"height="250px">
             </div>
             <div class="content">
                 <div class="video">
