--- a/html/mind/mind5.html
+++ b/html/mind/mind5.html
@@ -11,7 +11,7 @@
     <body>
         <div class="article">
             <div class="content">
-            <h1><br>章節五：為什麼狗狗一直舔我？</br></h1>
+                <img src="/1x/狗舔人.png"width="650px"height="250px">
             <div class="video">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/_YlBEurhHkE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
