--- a/html/train/train3.html
+++ b/html/train/train3.html
@@ -11,12 +11,7 @@
     <body>
         <div class="article">
             <div class="money-title">
-                <div class="Q">
-                    <div class="photo5"><img src="/1x/333.png"width="180px"height="200px"></div>
-                    <div class="line"></div>
-                </div>
-                <div class="ret2">
-                    <div class="mword">章節三：狗狗社會化</div>
+                <img src="/1x/社會化_工作區域 1.png"width="650px"height="250px">
                 </div>
             </div>
             <div class="content">
