--- a/html/fresh.html
+++ b/html/fresh.html
@@ -11,7 +11,7 @@
     <body>
         <div class="article">
             <div class="content">
-                <img src="/1x/生食.png"width="650px"height="250px">
+                <img src="/1x/鮮食.png"width="650px"height="250px">
             <br><h2>經過烹調的鮮食，相較之下比較沒有新鮮度及孳生細菌的問題。但是，營養元素均衡，也是鮮食必須注意的一大重點，接下來，我們來看準備狗狗鮮食需要注意的幾個重點：</h2></br>
             <div class="part1">
                 <h1><span style="color:rgb(31, 129, 241)">(1)營養比例：</span><span style="color:rgb(252, 66, 66)">澱粉-蛋白質-蔬果 = 1-1-1</span></h1>
