--- a/index.html
+++ b/index.html
@@ -35,15 +35,38 @@
         </script>
     </header>
     <body>
-        <div class="videopage" id="video">
-            <div class="video">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/z2xIiRJVrSA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>               
+        <div class="videopage">
+            <div class="box1">
+                <div class="video1">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/vvGDRVVNM8I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>               
+                </div>
+                <div class="intor1">
+                    <br>第一章：悸動</br>
+                </div>
             </div>
-            <div class="intor">
-                <br>我們希望通過紀錄片去讓大家更能了解到狗園照顧狗的辛苦以及他們最真實的環境是多麼的艱辛，
-                要在大太陽下或是冷風下，不斷的去清理幾千隻狗狗的大小便，以維護狗園的整潔，
-                有透過訪問狗園的志工及園長，讓大家更瞭解還有很多人為了某些人的棄養在幫他們擦屁股，
-                進而提倡不要棄養動物的觀念。</br>
+            <div class="box2">
+                <div class="intor2">
+                    <br>第二章：途中</br>
+                </div>
+                <div class="video2">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0R3lB1NWnVY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>               
+                </div>
+            </div>
+            <div class="box3">
+                <div class="video3">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Fxarm9r3VB0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>               
+                </div>
+                <div class="intor3">
+                    <br>第三章：考驗</br>
+                </div>
+            </div>
+            <div class="box4">
+                <div class="video4">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/g-i9rZU453U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>               
+                </div>
+                <div class="intor4">
+                    <br>第四章：團聚</br>
+                </div>
             </div>
         </div>
     </body>
