--- a/html/page2.html
+++ b/html/page2.html
@@ -48,7 +48,7 @@
             <div class="food-title" >
                 <img src="/1x/飲食-1-02.png"width="450px"height="250px">
             </div>
-            <div class="box1" id="KW1">
+            <div class="box1">
                     <div class="meat">
                         <div class="circle1">
                             <div class="photo1"><a href="/html/meat.html"><img src="/1x/meat.png"></a></div>
