--- a/html/money.html
+++ b/html/money.html
@@ -20,7 +20,7 @@
                     <li><a href="/index.html">浪與不浪</a></li>
                     <li><a  href="/html/page2.html">狗狗小知識<i class="fa fa-angle-double-down"></i></a>
                         <ul class="test">
-                            <li><a href="/html/page2.html">狗狗飲食</a></li>
+                            <li><a href="#KW1">狗狗飲食</a></li>
                             <li><a href="/html/money.html">狗狗開銷</a></li>
                             <li><a href="/html/med/med.html">狗狗醫療</a></li>
                             <li><a href="/html/mind/mind.html">狗狗心理</a></li>
