--- a/html/fun/fun1.html
+++ b/html/fun/fun1.html
@@ -34,7 +34,7 @@
                     <br><h2><br>地址：宜蘭縣冬山鄉安中路36號</br><br>訂房電話：0933-103789 / (03) 9592515</br><br>寵物公約：每個房間僅兩隻寵物以下不用收任何清潔費，每超過一隻加收300元，以此類推。</br></h2></br>
                     <div class="photo2">
                         <img src="/1x/宜1.png"width="450px"height="450px">
-                        <div class="word2"><br> 卡松安villa民宿最吸引人入住的地方，莫過於充滿濃濃峇里島南洋風格的建築，園內從迎賓入口、象神擺設等裝飾品都是老闆專程從峇里島運回台灣，甚至連滿腹樹木花草都以南洋植物為主，此外，園內乾淨且用心維護的草皮，非常適合毛孩與小孩到處跑跳。</br><br> ( (圖片來源：卡拉松villa民宿臉書)</br></div>
+                        <div class="word2"><br> 卡松安villa民宿最吸引人入住的地方，莫過於充滿濃濃峇里島南洋風格的建築，園內從迎賓入口、象神擺設等裝飾品都是老闆專程從峇里島運回台灣，甚至連滿腹樹木花草都以南洋植物為主，此外，園內乾淨且用心維護的草皮，非常適合毛孩與小孩到處跑跳。</br><br> (圖片來源：卡拉松villa民宿臉書)</br></div>
                     </div>
                     <div class="photo2-1">
                         <img src="/1x/宜2.png"width="450px"height="450px">
