--- a/html/med/med.html
+++ b/html/med/med.html
@@ -18,7 +18,7 @@
                 <div class="overlay-content">    
                     <ul>
                     <li><a href="/index.html">浪與不浪</a></li>
-                    <li><a  href="/html/page2.html">狗狗小知識<i class="fa fa-angle-double-down"></i></a>
+                    <li><a  href="/html/KW.html">狗狗小知識<i class="fa fa-angle-double-down"></i></a>
                         <ul class="test">
                             <li><a href="/html/page2.html">狗狗飲食</a></li>
                             <li><a href="/html/money.html">狗狗開銷</a></li>
@@ -76,6 +76,7 @@
                         </div>
                     </div>
             </div>
+            <div class="button"><a href="/html/KW.html"style="text-decoration:none;">BACK</a></div>
         </div>
     </body>
     </div>
