--- a/html/money.html
+++ b/html/money.html
@@ -18,7 +18,7 @@
                 <div class="overlay-content">    
                     <ul>
                     <li><a href="/index.html">浪與不浪</a></li>
-                    <li><a  href="/html/page2.html">狗狗小知識<i class="fa fa-angle-double-down"></i></a>
+                    <li><a  href="/html/KW.html">狗狗小知識<i class="fa fa-angle-double-down"></i></a>
                         <ul class="test">
                             <li><a href="#KW1">狗狗飲食</a></li>
                             <li><a href="/html/money.html">狗狗開銷</a></li>
@@ -145,6 +145,7 @@
                 <br><h2>以上醫療、伙食、保健、美容和寵物用品等開銷總金額，若以狗狗十年的壽命來估算的話，<span style="color:red">養狗狗的最少花費平均約62萬至130萬不等</span>(小型犬-中型犬-大型犬)，相當於我們花十年存下一桶金。</h2></br>
                 <h3>相信許多人看到這個驚人的數字可能有點卻步，但這確實是無法討價還價的買賣，更不可能提供退換貨，狗狗視你為唯一，請視牠為家人終身負責。</h3>
             </div>
+            <div class="button"><a href="/html/KW.html"style="text-decoration:none;">BACK</a></div>
         </div>
     </body>
     </div>
