--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
                 <div class="overlay-content">    
                     <ul>
                     <li><a href="index.html">浪與不浪</a></li>
-                    <li><a  href="/html/page2.html">狗狗小知識</a>
-                    </li>
+                    <li><a  href="/html/KW.html">狗狗小知識</a>
                     <li><a href="/html/about.html">關於我們</a></li>
                     </ul>
                 </div>
