--- a/html/page2.html
+++ b/html/page2.html
@@ -18,7 +18,7 @@
                 <div class="overlay-content">    
                     <ul>
                     <li><a href="/index.html">浪與不浪</a></li>
-                    <li><a  href="/html/page2.html">狗狗小知識<i class="fa fa-angle-double-down"></i></a>
+                    <li><a  href="/html/KW.html">狗狗小知識<i class="fa fa-angle-double-down"></i></a>
                         <ul class="test">
                             <li><a href="#KW1">狗狗飲食</a></li>
                             <li><a href="/html/money.html">狗狗開銷</a></li>
@@ -74,6 +74,7 @@
                         <div class="word4"><br>『零食』挑選撇步</br>＆注意事項</div>
                     </div>
             </div>
+            <div class="button"><a href="/html/KW.html"style="text-decoration:none;">BACK</a></div>
         </div>
     </body>
     </div>
