--- a/html/med/med4.html
+++ b/html/med/med4.html
@@ -11,13 +11,7 @@
     <body>
         <div class="article">
             <div class="money-title" >
-                <div class="Q">
-                    <div class="photo5"><img src="/1x/8.png"width="190px"height="200px"></div>
-                    <div class="line"></div>
-                </div>
-                <div class="ret2">
-                    <div class="mword">狗狗緊急CPR關鍵時機？</div>
-                </div>
+                <img src="/1x/cpr.png"width="550px"height="200px">
             </div>
             <div class="content">
                 <h1><br><span style="color:rgb(31, 129, 241)">『黃金4分鐘』</span></br></h1>
