--- a/html/train/train5.html
+++ b/html/train/train5.html
@@ -11,13 +11,7 @@
     <body>
         <div class="article">
             <div class="money-title">
-                <div class="Q">
-                    <div class="photo5"><img src="/1x/555.png"width="180px"height="200px"></div>
-                    <div class="line"></div>
-                </div>
-                <div class="ret2">
-                    <div class="mword"><br>章節五：</br>No暴衝！狗狗散步全攻略</div>
-                </div>
+                <img src="/1x/不暴衝.png"width="550px"height="200px">
             </div>
             <div class="content">
             <div class="video">
